@@ -258,7 +258,13 @@ STDMETHODIMP SVNDataObject::GetData(FORMATETC* pformatetcIn, STGMEDIUM* pmedium)
                 if (m_bFilesAsUrlLinks)
                     temp += L".url";
             }
-            _tcscpy_s(files->fgd[index].cFileName, (LPCTSTR)temp);
+            if (temp.GetLength() < MAX_PATH)
+                _tcscpy_s(files->fgd[index].cFileName, (LPCTSTR)temp);
+            else
+            {
+                files->cItems--;
+                continue;
+            }
             files->fgd[index].dwFlags = FD_ATTRIBUTES | FD_PROGRESSUI | FD_FILESIZE | FD_LINKUI;
             if (it->rootpath.IsUrl())
             {
